--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,10 +94,52 @@ main h5 {
 
 /*tutup utama*/
 
+/* Informasi */
+.carousel-inner,
+.berita-carousel {
+	height: 300px;
+}
+
+.gambar-carousel {
+	max-height: 300px;
+	width: 100%;
+}
+
+a,
+a:hover {
+	color: inherit;
+	text-decoration: none;
+}
+
+.carousel::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0.5),
+		rgba(0, 0, 0, 0)
+	);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+.judul-informasi {
+	color: maroon;
+}
+/* tutup informasi */
+
 /*profil*/
 
 .profil {
 	min-height: 650px;
+}
+
+.judul-profil {
+	font-family: Maven Pro, sans-serif;
+	font-weight: 500;
 }
 
 .isi-profil {
@@ -118,12 +160,17 @@ main h5 {
 
 .pelayanan {
 	min-height: 650px;
-	background-image: url("../img/agam.jpg");
+	background-image: url("../img/wallpaper.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
 	position: relative;
 	color: white;
+}
+
+.judul-layanan {
+	font-family: Maven Pro, sans-serif;
+	font-weight: 10px;
 }
 
 .pelayanan .garis-judul {
@@ -213,6 +260,10 @@ main h5 {
 	margin-bottom: 30px;
 }
 
+.judul-investasi {
+	font-family: Maven Pro, sans-serif;
+}
+
 .gis-investasi {
 	border: 1px maroon;
 }
@@ -228,12 +279,16 @@ main h5 {
 
 .naker {
 	min-height: 650px;
-	background-image: url("../img/agamkuning.png");
+	background-image: url("../img/wallpaper.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
 	position: relative;
 	color: white;
+}
+
+.judul-naker {
+	font-family: Maven Pro, sans-serif;
 }
 
 .naker .garis-judul {
@@ -256,13 +311,7 @@ main h5 {
 	left: 0;
 }
 
-.judul-naker {
-	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-	color: maroon;
-}
-
 .isi-naker {
-	font-size: 22px;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 	font-weight: 400;
 	color: #f0f0f0;
@@ -295,6 +344,10 @@ main h5 {
 
 .pengaduan {
 	min-height: 650px;
+}
+
+.judul-pengaduan {
+	font-family: Maven Pro, sans-serif;
 }
 
 .kontak-pp {
@@ -337,6 +390,9 @@ main h5 {
 	color: #f0f0f0;
 }
 
+.judul-kontak {
+	font-family: Maven Pro, sans-serif;
+}
 /*tutup kontak*/
 
 /*perizinan*/
@@ -402,6 +458,38 @@ main h5 {
 		font-size: 28px;
 	}
 
+	/* Informasi */
+	.carousel-inner,
+	.berita-carousel {
+		height: 600px;
+	}
+
+	.gambar-carousel {
+		max-height: 600px;
+		max-width: 100%;
+	}
+
+	.carousel::after {
+		content: "";
+		display: block;
+		width: 100%;
+		height: 100%;
+		background-image: linear-gradient(
+			to top,
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0)
+		);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+	}
+
+	.judul-informasi {
+		color: maroon;
+	}
+
+	/* tutup informasi */
+
 	/*pelayanan*/
 	.pelayanan .pilih-pelayanan {
 		font-size: 60px;
@@ -439,9 +527,6 @@ main h5 {
 		padding: 10px;
 	}
 
-	.isi-naker {
-		font-size: 32px;
-	}
 	/*tutup naker*/
 
 	.pengaduan .tombol-pp:hover {
