--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,18 @@ a:hover {
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
+.pilih-profil {
+	font-weight: 400;
+	font-size: 24px;
+	border: 2px solid;
+	color: maroon;
+	display: inline-block;
+	position: relative;
+	z-index: 1;
+	width: 100%;
+	padding: 10px;
+}
+
 /*tutup profil*/
 
 /*pelayanan*/
