--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,11 +97,11 @@ main h5 {
 /* Informasi */
 .carousel-inner,
 .berita-carousel {
-	height: 300px;
+	height: 200px;
 }
 
 .gambar-carousel {
-	max-height: 300px;
+	max-height: 200px;
 	width: 100%;
 }
 
@@ -128,6 +128,19 @@ a:hover {
 
 .judul-informasi {
 	color: maroon;
+	font-size: 24px;
+	font-weight: 600;
+}
+
+.ringkasan {
+	font-size: 12px;
+}
+
+.tgl_berita {
+	font-size: 10px;
+	background-color: maroon;
+	padding: 3px;
+	border-radius: 10px;
 }
 /* tutup informasi */
 
@@ -140,11 +153,7 @@ a:hover {
 .judul-profil {
 	font-family: Maven Pro, sans-serif;
 	font-weight: 500;
-}
-
-.isi-profil {
-	font-size: 18px;
-	padding: 10px;
+	font-size: 28px;
 }
 
 .profil .slogan {
@@ -183,6 +192,7 @@ a:hover {
 .judul-layanan {
 	font-family: Maven Pro, sans-serif;
 	font-weight: 10px;
+	font-size: 28px;
 }
 
 .pelayanan .garis-judul {
@@ -209,7 +219,7 @@ a:hover {
 }
 
 .pelayanan .pilih-pelayanan {
-	font-size: 40px;
+	font-size: 28px;
 	padding: 10px;
 	text-decoration: none;
 	border: 2px solid;
@@ -242,6 +252,7 @@ a:hover {
 
 .judul-modal {
 	font-size: 24px;
+	font-size: 28px;
 }
 
 .pilih-modal-pelayanan {
@@ -274,6 +285,7 @@ a:hover {
 
 .judul-investasi {
 	font-family: Maven Pro, sans-serif;
+	font-size: 28px;
 }
 
 .gis-investasi {
@@ -301,6 +313,7 @@ a:hover {
 
 .judul-naker {
 	font-family: Maven Pro, sans-serif;
+	font-size: 28px;
 }
 
 .naker .garis-judul {
@@ -339,8 +352,8 @@ a:hover {
 	padding: 10px;
 }
 
-.naker .pilih-naker {
-	font-size: 40px;
+.pilih-naker {
+	font-size: 28px;
 	padding: 10px;
 	text-decoration: none;
 	border: 2px solid;
@@ -348,6 +361,10 @@ a:hover {
 	display: inline-block;
 	width: 100%;
 	margin-top: 20px;
+}
+
+.logo-enaker {
+	width: 130px;
 }
 
 /*tutup naker*/
@@ -360,6 +377,7 @@ a:hover {
 
 .judul-pengaduan {
 	font-family: Maven Pro, sans-serif;
+	font-size: 28px;
 }
 
 .kontak-pp {
@@ -404,6 +422,7 @@ a:hover {
 
 .judul-kontak {
 	font-family: Maven Pro, sans-serif;
+	font-size: 28px;
 }
 /*tutup kontak*/
 
@@ -530,9 +549,25 @@ a:hover {
 
 	.judul-informasi {
 		color: maroon;
+		font-size: 40px;
+		font-weight: 600;
+	}
+
+	.ringkasan {
+		font-size: 18px;
+	}
+
+	.tgl_berita {
+		font-size: 12px;
+		background-color: maroon;
+		padding: 3px;
+		border-radius: 10px;
 	}
 
 	/* tutup informasi */
+
+	/* Profil */
+	/* tutup profil */
 
 	/*pelayanan*/
 	.pelayanan .pilih-pelayanan {
@@ -556,7 +591,7 @@ a:hover {
 
 	/*naker*/
 	.naker .pilih-naker {
-		font-size: 60px;
+		font-size: 30px;
 		text-decoration: none;
 		color: #f0f0f0;
 		display: inline-block;
