--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,26 @@ body {
 	color: maroon;
 }
 
+.tombol-aksi {
+	font-size: 14px;
+	padding: 5px;
+	text-decoration: none;
+	color: maroon;
+	display: inline-block;
+	width: 100%;
+	border: 2px solid;
+	border-radius: 5px;
+	transition-duration: 0.5s;
+}
+
+.tombol-aksi:hover {
+	background-color: maroon;
+	color: white;
+	transition-duration: 0.5s;
+	border-radius: 30px;
+	padding: 5px;
+}
+
 /* custom pagination */
 .custom-pagination {
 	margin-bottom: 30px;
@@ -216,6 +236,7 @@ a:hover {
 	z-index: 1;
 	width: 100%;
 	padding: 10px;
+	transition-duration: 0.5s;
 }
 
 .pilih-profil:hover {
@@ -279,6 +300,7 @@ a:hover {
 	position: relative;
 	z-index: 1;
 	width: 100%;
+	transition-duration: 0.5s;
 }
 
 .pelayanan::after {
@@ -314,6 +336,7 @@ a:hover {
 	padding: 5px;
 	border: 2px solid maroon;
 	width: 100%;
+	transition-duration: 0.5s;
 }
 
 .pilih-modal-pelayanan:hover {
@@ -356,6 +379,7 @@ a:hover {
 	display: inline-block;
 	width: 350px;
 	border: 2px solid;
+	transition-duration: 0.5s;
 }
 
 .pilih-investasi:hover {
@@ -374,6 +398,7 @@ a:hover {
 	display: inline-block;
 	width: 100%;
 	border: 2px solid;
+	transition-duration: 0.5s;
 }
 
 .pilih-investasi-2:hover {
@@ -452,6 +477,7 @@ a:hover {
 	display: inline-block;
 	width: 100%;
 	margin-top: 20px;
+	transition-duration: 0.5s;
 }
 
 .logo-enaker {
@@ -499,6 +525,7 @@ a:hover {
 	margin-bottom: 20px;
 	width: 100%;
 	text-align: center;
+	transition-duration: 0.5s;
 }
 
 /*tutup pengaduan*/
@@ -675,6 +702,7 @@ a:hover {
 		color: white;
 		display: inline-block;
 		width: 100%;
+		transition-duration: 0.5s;
 	}
 
 	.pelayanan .pilih-pelayanan:hover {
@@ -693,6 +721,7 @@ a:hover {
 		color: #f0f0f0;
 		display: inline-block;
 		width: 350px;
+		transition-duration: 0.5s;
 	}
 
 	.naker .pilih-naker:hover {
@@ -723,5 +752,6 @@ a:hover {
 		display: inline-block;
 		text-align: center;
 		width: 350px;
+		transition-duration: 0.5s;
 	}
 }
