--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,6 +724,25 @@ a:hover {
 		border-radius: 50px;
 		padding: 10px;
 	}
+
+	.btn-tracking {
+		font-size: 14px;
+		padding: 6px;
+		text-decoration: none;
+		color: maroon;
+		display: inline-block;
+		width: 100%;
+		transition-duration: 0.5s;
+		border: 2px solid;
+	}
+
+	.btn-tracking:hover {
+		background-color: maroon;
+		color: white;
+		transition-duration: 0.5s;
+		border-radius: 50px;
+		padding: 6px;
+	}
 	/*tutup pelayanan*/
 
 	/*naker*/
