--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
 	transition-duration: 0.5s;
 }
 
+.carousel-caption {
+	z-index: 1;
+}
+
 .ikon-pengaduan {
 	color: maroon;
 }
@@ -115,6 +119,10 @@ main h5 {
 	z-index: 1;
 }
 
+.layer-1 {
+	z-index: 2;
+}
+
 .navbar {
 	background-image: linear-gradient(to bottom, rgb(196, 0, 0), maroon);
 }
@@ -217,8 +225,6 @@ a:hover {
 	font-size: 10px;
 	border: 1px solid;
 	display: inline-block;
-	position: relative;
-	z-index: 1;
 	padding: 5px;
 	transition-duration: 0.5s;
 }
@@ -230,8 +236,6 @@ a:hover {
 	border: 1px solid maroon;
 	border-radius: 30px;
 	display: inline-block;
-	position: relative;
-	z-index: 1;
 	padding: 5px;
 	transition-duration: 0.5s;
 }
@@ -690,6 +694,32 @@ video {
 	color: #2a2a2a;
 }
 /*tutup perizinan*/
+
+/* grafik */
+.grafik {
+	background-image: url("../img/wallpaper.jpg");
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	color: white;
+}
+
+.grafik::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0.8),
+		rgba(0, 0, 0, 0)
+	);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+/* tutup grafik */
 
 /*Login*/
 .judul_login {
