--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
+/* popup banner */
+.popUpBannerBox {
+	position: fixed;
+	background: rgba(0, 0, 0, 0.9);
+	width: 100%;
+	height: 100%;
+	z-index: 999999;
+	display: none;
+	overflow-y: scroll;
+}
+.popUpBannerInner {
+	margin: auto;
+}
+
+.banner {
+	border-radius: 15px;
+}
+
+.closeButton {
+	text-decoration: none;
+	font-size: 24px;
+}
+/* close popup banner */
+
 /* Utama */
 html {
 	scroll-behavior: smooth;
