--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .banner {
-	border-radius: 15px;
+	border-radius: 30px;
 }
 
 .closeButton {
@@ -189,12 +189,18 @@ main h5 {
 /* Informasi */
 .carousel-inner,
 .berita-carousel {
-	height: 200px;
+	height: 300px;
+}
+
+.carousel-item,
+.carousel-indicators {
+	color: maroon;
 }
 
 .gambar-carousel {
-	max-height: 200px;
+	max-height: 230px;
 	width: 100%;
+	border-radius: 15px;
 }
 
 .gambar-berita {
@@ -219,40 +225,27 @@ a:hover {
 	text-decoration: none;
 }
 
-.carousel::after {
-	content: "";
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-image: linear-gradient(
-		to top,
-		rgba(0, 0, 0, 0.5),
-		rgba(0, 0, 0, 0)
-	);
-	position: absolute;
-	bottom: 0;
-	left: 0;
-}
-
 .tombol-informasi {
 	transition-duration: 0.5s;
 }
 
 .judul-informasi {
-	color: maroon;
-	font-size: 24px;
+	color: white;
+	background-color: maroon;
+	width: fit-content;
+	font-size: 16px;
 	font-weight: 600;
+	opacity: 0.8;
 }
 
 .ringkasan {
-	font-size: 12px;
+	font-size: 10px;
 }
 
 .tgl_berita {
 	font-size: 10px;
-	background-color: maroon;
-	padding: 3px;
-	border-radius: 10px;
+	color: white;
+	border-bottom: 1px solid maroon;
 }
 
 .informasi-lainnya {
@@ -273,6 +266,28 @@ a:hover {
 	display: inline-block;
 	padding: 5px;
 	transition-duration: 0.5s;
+}
+
+.judul-informasi2 {
+	display: inline-block;
+	color: maroon;
+	font-size: 20px;
+	font-weight: 600;
+	width: fit-content;
+	text-align: justify;
+}
+
+.tgl_berita2 {
+	font-size: 10px;
+	color: white;
+	background-color: maroon;
+	padding: 5px;
+}
+.gambar-berita2 {
+	height: 100%;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* tutup informasi */
@@ -847,29 +862,22 @@ video {
 	}
 
 	.gambar-carousel {
-		max-height: 600px;
-		max-width: 100%;
-	}
-
-	.carousel::after {
-		content: "";
-		display: block;
-		width: 100%;
-		height: 100%;
-		background-image: linear-gradient(
-			to top,
-			rgba(0, 0, 0, 0.5),
-			rgba(0, 0, 0, 0)
-		);
-		position: absolute;
-		bottom: 0;
-		left: 0;
+		max-height: 500px;
+		width: 80%;
+		margin: auto;
 	}
 
 	.judul-informasi {
-		color: maroon;
+		display: inline-block;
+		color: white;
+		background-color: maroon;
 		font-size: 40px;
 		font-weight: 600;
+		width: fit-content;
+		opacity: 0.8;
+		margin-left: 30px;
+		margin-right: 30px;
+		text-align: justify;
 	}
 
 	.ringkasan {
@@ -877,14 +885,40 @@ video {
 	}
 
 	.tgl_berita {
-		font-size: 12px;
-		background-color: maroon;
-		padding: 3px;
-		border-radius: 10px;
+		font-size: 16px;
+		color: white;
+		margin-left: 30px;
+		border-bottom: 2px solid maroon;
 	}
 
 	.informasi {
 		min-height: 580px;
+	}
+
+	.judul-informasi2 {
+		display: inline-block;
+		color: maroon;
+		font-size: 40px;
+		font-weight: 600;
+		width: fit-content;
+		text-align: justify;
+	}
+
+	.tgl_berita2 {
+		font-size: 16px;
+		color: white;
+		background-color: maroon;
+		padding: 5px;
+	}
+	.gambar-berita2 {
+		height: 100%;
+		width: 50%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.ringkasan {
+		font-size: 12px;
 	}
 
 	/* tutup informasi */
