--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,17 @@ main h5 {
 	left: 0;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.display-4 {
+	font-family: Spectral, sans-serif;
+}
+
 .navbar-brand {
 	font-family: Maven Pro, sans-serif;
 	font-size: 20px;
@@ -151,6 +162,7 @@ main h5 {
 	margin-top: 10px;
 	position: relative;
 	z-index: 1;
+	font-family: Spectral, sans-serif;
 }
 
 .layer-1 {
@@ -160,6 +172,7 @@ main h5 {
 
 .navbar {
 	background-image: linear-gradient(to bottom, rgb(196, 0, 0), maroon);
+	font-family: Spectral, sans-serif;
 }
 
 .navbar-brand {
