--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,7 @@ h6,
 	max-height: 230px;
 	width: 100%;
 	border-radius: 15px;
+	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 .gambar-berita {
@@ -973,22 +974,55 @@ video {
 		height: 600px;
 	}
 
+	.multi-item-carousel {
+		overflow: hidden;
+	}
+	.multi-item-carousel .carousel-indicators {
+		margin-right: 25%;
+		margin-left: 25%;
+	}
+	.multi-item-carousel .carousel-control-prev,
+	.multi-item-carousel .carousel-control-next {
+		background: rgba(255, 255, 255, 0.3);
+		width: 10%;
+		z-index: 2; /* .carousel-caption has z-index 10 */
+	}
+	.multi-item-carousel .carousel-inner {
+		width: 230%;
+		left: -65%;
+	}
+	.multi-item-carousel .carousel-item-next:not(.carousel-item-left),
+	.multi-item-carousel .carousel-item-right.active {
+		-webkit-transform: translate3d(33%, 0, 0);
+		transform: translate3d(33%, 0, 0);
+	}
+	.multi-item-carousel .carousel-item-prev:not(.carousel-item-right),
+	.multi-item-carousel .carousel-item-left.active {
+		-webkit-transform: translate3d(-33%, 0, 0);
+		transform: translate3d(-33%, 0, 0);
+	}
+	.multi-item-carousel .item__third {
+		float: left;
+		position: relative;
+		width: 33.33333333%;
+	}
+
 	.gambar-carousel {
 		max-height: 500px;
-		width: 80%;
-		margin: auto;
+		width: 95%;
+		height: 480px;
+		margin-left: 30px;
+		margin-right: 30px;
 	}
 
 	.judul-informasi {
 		display: inline-block;
 		color: white;
 		background-color: maroon;
-		font-size: 40px;
+		font-size: 30px;
 		font-weight: 600;
 		width: fit-content;
 		opacity: 0.8;
-		margin-left: 30px;
-		margin-right: 30px;
 		text-align: justify;
 	}
 
@@ -999,7 +1033,6 @@ video {
 	.tgl_berita {
 		font-size: 16px;
 		color: white;
-		margin-left: 30px;
 		border-bottom: 2px solid maroon;
 	}
 
