--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,6 +421,13 @@ a:hover {
 	width: 100%;
 	border-radius: 30px;
 }
+
+.gambar-sarpras {
+	height: 100%;
+	width: 100%;
+	border-radius: 30px;
+	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
 /*tutup profil*/
 
 /*pelayanan*/
