--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1084,6 +1084,10 @@ video {
 		margin-right: auto;
 	}
 
+	.gambar-berita2:hover {
+		transform: scale(2);
+	}
+
 	.ringkasan {
 		font-size: 12px;
 	}
