--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1082,10 +1082,11 @@ video {
 		width: 50%;
 		margin-left: auto;
 		margin-right: auto;
+		transition-duration: 1s;
 	}
 
 	.gambar-berita2:hover {
-		transform: scale(2);
+		transform: scale(1.5s);
 	}
 
 	.ringkasan {
