--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ main h5 {
 .jumbotron {
 	height: 42vh;
 	width: 100%;
-	background-image: url("../img/bg-web.jpg");
+	background-image: url("../img/bghut76.jpg");
 	background-attachment: fixed;
 	background-size: 100%;
 	position: relative;
@@ -949,7 +949,7 @@ video {
 	.jumbotron {
 		height: 92vh;
 		width: 100%;
-		background-image: url("../img/bg-web.jpg");
+		background-image: url("../img/bghut76.jpg");
 		background-attachment: fixed;
 		background-size: cover;
 		position: relative;
