--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -949,7 +949,7 @@ video {
 	.jumbotron {
 		height: 92vh;
 		width: 100%;
-		background-image: url("../img/bghut76.jpg");
+		background-image: url("../img/bg-web.jpg");
 		background-attachment: fixed;
 		background-size: cover;
 		position: relative;
