--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,28 +105,29 @@ main h5 {
 }
 
 .jumbotron {
-	height: 42vh;
+	height: 92vh;
 	width: 100%;
-	background-image: url("../img/bghut76.jpg");
-	background-attachment: fixed;
-	background-size: 100%;
-	position: relative;
-	overflow: hidden;
+	background-color: white;
 }
 
-.jumbotron::after {
-	content: "";
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-image: linear-gradient(
-		to top,
-		rgba(0, 0, 0, 0.8),
-		rgba(0, 0, 0, 0)
-	);
-	position: absolute;
-	bottom: 0;
-	left: 0;
+.welcome {
+	font-size: 16px;
+	text-align: center;
+}
+
+.nama {
+	font-size: 18px;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.agam {
+	width: 50px;
+}
+
+.posisi-agam {
+	text-align: center;
+	margin-top: 10px;
 }
 
 p,
@@ -176,12 +177,8 @@ h6,
 }
 
 .jumbotron .judul {
-	color: white;
+	color: black;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-	margin-top: 10px;
-	position: relative;
-	z-index: 1;
-	font-family: Spectral, sans-serif;
 }
 
 .layer-1 {
@@ -190,7 +187,7 @@ h6,
 }
 
 .navbar {
-	background-image: linear-gradient(to bottom, rgb(196, 0, 0), maroon);
+	background-color: maroon;
 	font-family: Spectral, sans-serif;
 }
 
@@ -949,33 +946,31 @@ video {
 	.jumbotron {
 		height: 92vh;
 		width: 100%;
-		background-image: url("../img/bg-web.jpg");
-		background-attachment: fixed;
-		background-size: cover;
-		position: relative;
+		background-color: white;
 	}
 
-	.jumbotron::after {
-		content: "";
-		display: block;
-		width: 100%;
-		height: 100%;
-		background-image: linear-gradient(
-			to top,
-			rgba(0, 0, 0, 0.8),
-			rgba(0, 0, 0, 0)
-		);
-		position: absolute;
-		bottom: 0;
-		left: 0;
+	.welcome {
+		font-size: 30px;
+		text-align: left;
+	}
+
+	.nama {
+		font-size: 38px;
+		text-align: left;
+	}
+
+	.agam {
+		width: 100px;
+	}
+
+	.posisi-agam {
+		text-align: left;
+		margin-top: 100px;
 	}
 
 	.jumbotron .judul {
-		color: white;
+		color: black;
 		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-		margin-top: 100px;
-		position: relative;
-		z-index: 1;
 	}
 
 	.jumbotron .display-3 {
