--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,14 @@ body {
 	background-color: #f0f0f0;
 }
 
+.carousel .carousel-risiko li {background-color: maroon;}
+.carousel .carousel-risiko li.active {background-color: black;}
+
+.carousel .kontrol-risiko {
+	background-color: maroon;
+	padding:3px;
+}
+
 .carousel-item {
 	transition-duration: 0.5s;
 }
@@ -235,6 +243,11 @@ h6,
 	width: 100%;
 	border-radius: 15px;
 	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.gambar-risiko {
+	width: 100%;
+	height:300px;
 }
 
 .gambar-berita {
@@ -543,7 +556,7 @@ a:hover {
 	color: maroon;
 	padding: 5px;
 	border: 2px solid maroon;
-	width: 50%;
+	width: 80%;
 	transition-duration: 0.5s;
 }
 
@@ -1061,6 +1074,11 @@ video {
 		height: 480px;
 		margin-left: 30px;
 		margin-right: 30px;
+	}
+
+	.gambar-risiko {
+		width: 600px;
+		height: 600px;
 	}
 
 	.judul-informasi {
