--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,20 +531,7 @@ a:hover {
 	border: 2px solid maroon;
 }
 
-.pelayanan::after {
-	content: "";
-	display: block;
-	width: 100%;
-	height: 100%;
-	background-image: linear-gradient(
-		to top,
-		rgba(0, 0, 0, 0.8),
-		rgba(0, 0, 0, 0)
-	);
-	position: absolute;
-	bottom: 0;
-	left: 0;
-}
+
 
 .modal-header {
 	background-color: maroon;
@@ -876,6 +863,29 @@ video {
 	width: 100%;
 	text-align: center;
 	transition-duration: 0.5s;
+}
+
+.pilih-pengaduan {
+	font-weight: 400;
+	font-size: 24px;
+	border: 2px solid;
+	color: maroon;
+	display: inline-block;
+	position: relative;
+	z-index: 1;
+	width: 100%;
+	padding: 10px;
+	transition-duration: 1s;
+	opacity: 0;
+	transform: translate(0, -50px);
+}
+
+.pilih-pengaduan:hover {
+	background-color: maroon;
+	color: white;
+	transition-duration: 0.5s;
+	border-radius: 30px;
+	padding: 10px;
 }
 
 /*tutup pengaduan*/
