--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ main h5 {
 .jumbotron {
 	height: 92vh;
 	width: 100%;
-	background-image: url("../img/bg_hut_ri.jpg");
+	background-image: url("../img/kantor.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center center;
@@ -130,6 +130,8 @@ main h5 {
 	font-size: 18px;
 	text-align: center;
 	margin-bottom: 20px;
+	color: maroon;
+	text-shadow: 2px 2px #f0f0f0;
 }
 
 .agam {
@@ -1012,7 +1014,7 @@ video {
 	.jumbotron {
 		height: 92vh;
 		width: 100%;
-		background-image: url("../img/bg_hut_ri.jpg");
+		background-image: url("../img/kantor.jpg");
 		background-attachment: fixed;
 		background-size: cover;
 		background-position: center center;
