--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 	display: none;
 	overflow-y: scroll;
 }
+
 .popUpBannerInner {
 	margin: auto;
 }
@@ -20,19 +21,21 @@
 	text-decoration: none;
 	font-size: 24px;
 }
+
 /* close popup banner */
 
 /* Utama */
 html {
 	scroll-behavior: smooth;
 }
+
 .tanggal {
 	font-size: 9px;
 	color: white;
 }
 
 @media (min-width: 768px) {
-	.ten-columns > .col-sm-2 {
+	.ten-columns>.col-sm-2 {
 		width: 20%;
 	}
 }
@@ -41,12 +44,17 @@ body {
 	background-color: #f0f0f0;
 }
 
-.carousel .carousel-risiko li {background-color: maroon;}
-.carousel .carousel-risiko li.active {background-color: black;}
+.carousel .carousel-risiko li {
+	background-color: maroon;
+}
+
+.carousel .carousel-risiko li.active {
+	background-color: black;
+}
 
 .carousel .kontrol-risiko {
 	background-color: maroon;
-	padding:3px;
+	padding: 3px;
 }
 
 .carousel-item {
@@ -87,17 +95,20 @@ body {
 	margin-top: 50px;
 	border-radius: 50px;
 }
+
 .custom-pagination a {
 	background: whitesmoke;
 	color: maroon;
 	padding: 10px;
 }
+
 .custom-pagination a:hover {
 	background: maroon;
 	color: whitesmoke;
 	padding: 10px;
 	text-decoration: none;
 }
+
 .custom-pagination strong {
 	background: maroon;
 	color: whitesmoke;
@@ -256,7 +267,7 @@ h6,
 
 .gambar-risiko {
 	width: 100%;
-	height:300px;
+	height: 300px;
 }
 
 .gambar-berita {
@@ -339,6 +350,7 @@ a:hover {
 	background-color: maroon;
 	padding: 5px;
 }
+
 .gambar-berita2 {
 	height: 100%;
 	width: 50%;
@@ -455,6 +467,7 @@ a:hover {
 	border-radius: 30px;
 	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
+
 /*tutup profil*/
 
 /*pelayanan*/
@@ -693,7 +706,7 @@ video {
 }
 
 /*ulayat*/
-.pilih-ulayat{
+.pilih-ulayat {
 	font-size: 20px;
 	padding: 10px;
 	text-decoration: none;
@@ -717,9 +730,9 @@ video {
 
 @media (pointer: coarse) and (hover: none) {
 	header {
-		background: url("https://source.unsplash.com/XT5OInaElMw/1600x900") black
-			no-repeat center center scroll;
+		background: url("https://source.unsplash.com/XT5OInaElMw/1600x900") black no-repeat center center scroll;
 	}
+
 	header video {
 		display: none;
 	}
@@ -910,6 +923,7 @@ video {
 	border-radius: 20px;
 	padding: 20px;
 }
+
 /*tutup kontak*/
 
 /*perizinan*/
@@ -924,14 +938,16 @@ video {
 .tutup:hover {
 	color: #2a2a2a;
 }
+
 /*tutup perizinan*/
 
 /*simulasi retribusi*/
-.header-retribusi h2{
-	color:maroon;
+.header-retribusi h2 {
+	color: maroon;
 	text-decoration: none;
 	font-family: Maven Pro, sans-serif;
 }
+
 /*tutup simulasi retribusi*/
 
 /* skm */
@@ -943,6 +959,7 @@ video {
 	position: relative;
 	color: white;
 }
+
 /* close skm */
 
 /* grafik */
@@ -960,15 +977,14 @@ video {
 	display: block;
 	width: 100%;
 	height: 100%;
-	background-image: linear-gradient(
-		to top,
-		rgba(0, 0, 0, 0.8),
-		rgba(0, 0, 0, 0)
-	);
+	background-image: linear-gradient(to top,
+			rgba(0, 0, 0, 0.8),
+			rgba(0, 0, 0, 0));
 	position: absolute;
 	bottom: 0;
 	left: 0;
 }
+
 /* tutup grafik */
 
 /*Login*/
@@ -986,12 +1002,14 @@ video {
 .kartu_login img {
 	margin: 10px;
 }
+
 /*tutup login*/
 
 @media (min-width: 760px) {
 	.modal-lg {
 		max-width: 95% !important;
 	}
+
 	.nav-link {
 		padding: 0.25rem 0;
 		margin-right: 10px;
@@ -1073,30 +1091,37 @@ video {
 	.multi-item-carousel {
 		overflow: hidden;
 	}
+
 	.multi-item-carousel .carousel-indicators {
 		margin-right: 25%;
 		margin-left: 25%;
 	}
+
 	.multi-item-carousel .carousel-control-prev,
 	.multi-item-carousel .carousel-control-next {
 		background: rgba(255, 255, 255, 0.3);
 		width: 10%;
-		z-index: 2; /* .carousel-caption has z-index 10 */
+		z-index: 2;
+		/* .carousel-caption has z-index 10 */
 	}
+
 	.multi-item-carousel .carousel-inner {
 		width: 230%;
 		left: -65%;
 	}
+
 	.multi-item-carousel .carousel-item-next:not(.carousel-item-left),
 	.multi-item-carousel .carousel-item-right.active {
 		-webkit-transform: translate3d(33%, 0, 0);
 		transform: translate3d(33%, 0, 0);
 	}
+
 	.multi-item-carousel .carousel-item-prev:not(.carousel-item-right),
 	.multi-item-carousel .carousel-item-left.active {
 		-webkit-transform: translate3d(-33%, 0, 0);
 		transform: translate3d(-33%, 0, 0);
 	}
+
 	.multi-item-carousel .item__third {
 		float: left;
 		position: relative;
@@ -1156,6 +1181,7 @@ video {
 		background-color: maroon;
 		padding: 5px;
 	}
+
 	.gambar-berita2 {
 		height: 100%;
 		width: 50%;
@@ -1215,6 +1241,7 @@ video {
 		border-radius: 50px;
 		padding: 6px;
 	}
+
 	/*tutup pelayanan*/
 
 	/*naker*/
