menambahkan tampilan skm atau nilai ikm berdasarkan semester-nya

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1285,3 +1285,20 @@ video {
 		transition-duration: 0.5s;
 	}
 }
+
+.btn-outline-maroon {
+	padding: 6px;
+	text-decoration: none;
+	color: maroon;
+	transition-duration: 0.5s;
+	border: 2px solid;
+	border-radius: 50px;
+}
+
+.btn-outline-maroon:hover {
+	background-color: maroon;
+	color: white;
+	transition-duration: 0.5s;
+	border-radius: 50px;
+	padding: 6px;
+}
