--- a/assets/css/pesan-home.css
+++ b/assets/css/pesan-home.css
@@ -184,3 +184,26 @@
     margin-top: 5px;
     display: block;
 }
+
+/* tanda online admin */
+.chat-avatar-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.online-status {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #4CAF50;
+    /* Warna hijau untuk online */
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+
+.online-status.offline {
+    background-color: #f44336;
+    /* Warna merah untuk offline */
+}
