update modal informasi halaman home

--- a/assets/css/pesan-home.css
+++ b/assets/css/pesan-home.css
@@ -103,10 +103,10 @@
     }
 }
 
-.modal-body {
+/* .modal-body {
     overflow-y: auto;
     max-height: 250px;
-}
+} */
 
 .chat-message {
     display: flex;
